/*
 *  Copyright (c) 2012 Malhar, Inc.
 *  All Rights Reserved.
 */
package com.malhartech.bufferserver;

option optimize_for = SPEED;

message SimpleData {
  required bytes data = 1;
}

message PartitionedData {
  required bytes data = 1;
  required uint32 partition = 2;
}

message ResetWindow {
  required uint32 width = 1;
}

message Partitions {
   required uint32 mask = 1;
   repeated uint32 partition = 2;
}

message SubscriberRequest {
  enum PolicyType {
    CUSTOM = 0;
    ROUND_ROBIN = 1;
    RANDOM_ONE = 2;
    LEAST_BUSY = 3;
    GIVE_ALL = 4;
  }

  required string identifier = 1;
  required string type = 2;
  optional uint32 base_seconds = 3 [default = 0];
  optional string upstream_identifier = 4;
  optional Partitions partitions = 5;
  optional PolicyType policy = 6 [default = GIVE_ALL ];
}

message PublisherRequest {
  required string identifier = 1;
  optional uint32 base_seconds = 2 [default = 0];
}

message PurgeRequest {
  required string identifier = 1;
  optional uint32 base_seconds = 2 [default = 0];
}

message ResetRequest {
  required string identifier = 1;
}

message CodecState {
  required bytes data = 1;
}

message Data {
  enum DataType {
    NO_DATA = 0;
    RESET_WINDOW = 1;
    BEGIN_WINDOW = 2;
    SIMPLE_DATA = 3;
    PARTITIONED_DATA = 4;
    END_WINDOW = 5;
    END_STREAM = 6;
    PUBLISHER_REQUEST = 7;
    SUBSCRIBER_REQUEST = 8;
    PURGE_REQUEST = 9;
    RESET_REQUEST = 10;
    CHECKPOINT = 11;
    CODEC_STATE = 12;
  }

  required DataType type = 1;
  required uint32 window_id = 2;

  optional ResetWindow resetWindow = 3;
  optional SimpleData simpleData = 4;
  optional PartitionedData partitionedData = 5;
  optional PublisherRequest publishRequest = 6;
  optional SubscriberRequest subscribeRequest = 7;
  optional PurgeRequest purgeRequest = 8;
  optional ResetRequest ResetRequest = 9;
  optional CodecState codecState = 10;
}